<resources>
    <string name="app_name">Freedom</string>
    <string name="wlc_to_freedom">Welcome to our freedom messaging app</string>
    <string name="free_talk">Freedom talk any persone of your\n mother language</string>
    <string name="skip">Skip   ></string>
    <string name="title_activity_spalsh_screen">SpalshScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="singin">Sing In</string>
    <string name="icon_google">Icon google</string>
    <string name="icon_facebook">Icon Facebook</string>
    <string name="rememeber">Remember me</string>
    <string name="forget">Forget Password?</string>
    <string name="dont_have">Don\'t have account? </string>
    <string name="username">Username</string>
    <string name="confirmationemail">Confirmation Email</string>
    <string name="singup">Sing Up</string>
    <string name="confirmationpass">Confirmation Password</string>
    <string name="default_web_client_id">949718303158-5uk9tpg5f7g24ggenkohlpjk74nscn9b.apps.googleusercontent.com</string>

    <string name="facebook_app_id">274049845226180</string>
    <string name="fb_login_protocol_scheme">fb804765631376311</string>
    <string name="facebook_client_token">8e0dce745c2619a35ec4504f5354432b</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_registration">Registration</string>
    <string name="authntificate">Authenficate...</string>
    <string name="title_home">Home</string>
    <string name="title_chat">Chat</string>
    <string name="title_profile">Profile</string>
    <string name="title_add">Add Post</string>
    <string name="title_notifications">Notifications</string>
    <string name="Loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="read_more">Read More</string>
    <string name="read_less">Read Less</string>
    <string name="title_post">Post</string>
    <string name="title_status">Status</string>
    <string name="title_video">Video</string>
    <string name="upload">Upload</string>
    <string name="photo">Photo</string>
</resources>