<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.azlan.freedom.ui.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >

    </fragment>
    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.azlan.freedom.ui.fragments.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" >
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.azlan.freedom.ui.fragments.NotificationFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notification" >
    </fragment>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.azlan.freedom.ui.fragments.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>