<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/sgv"
        android:visibility="invisible"
        android:contentDescription="@string/wlc_to_freedom"/>

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wlc_to_freedom"
        android:gravity="center"
        android:textSize="@dimen/wcl_dimen"
        android:textStyle="bold"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tvfree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/free_talk"
        android:gravity="center"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/txskip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/skip"
        android:gravity="center"
        android:visibility="invisible" />
</LinearLayout>